# LiveCTF-DEFCON32

./: LICENSE  README.md
finals/challenges/annelid/: metadata.toml
finals/challenges/cryptohno/: .gitignore  metadata.toml
finals/challenges/ez-calculator/: metadata.toml
finals/challenges/hercules/: metadata.toml
finals/challenges/hercules/solution-josh/: pyproject.toml  solve.py
finals/challenges/intel-1001/: metadata.toml
finals/challenges/lost-on-the-ocean/: metadata.toml
finals/challenges/memories/: metadata.toml
finals/challenges/printf-plus-plus/: metadata.toml
finals/challenges/printf-plus-plus/challenge/src/: CMakeLists.txt  challenge.cpp
finals/challenges/pwnamp/: metadata.toml  notes.txt
finals/challenges/rather-susceptible-service/: metadata.toml
finals/challenges/relocate-me-maybe/: metadata.toml
finals/challenges/setjmp-around/: metadata.toml
finals/challenges/sheap/: metadata.toml
finals/challenges/something-rotten/: metadata.toml  notes.txt
finals/challenges/sudo-make-me-a-sandwich/: metadata.toml
finals/challenges/vim/: metadata.toml
finals/challenges/you-only-gadget-once/: metadata.toml
qualifiers/challenges/: Makefile  extract-handout.sh  test-run.sh  test-solution.sh
qualifiers/challenges/durnk/: metadata.toml
qualifiers/challenges/ndles/: metadata.toml
qualifiers/challenges/process_vm_readv-me-maybe/: metadata.toml
qualifiers/challenges/qrackme/: .gitignore  metadata.toml
qualifiers/challenges/shiny-shells/: metadata.toml
qualifiers/challenges/test-challenge/: .gitignore
qualifiers/deploy/docker/: .env  (+4 more)
(+443 files in other folders)
